add lifestyle inflation endpoint
